tests/NormalTests/paczka1/small_fuzzy/62123349.err
Error in line 9: c1xJtrsPL0y S493 33,4
Error in line 12: c1xJtrsPL0y S493 32,2
